libs/config/tests/errors/ce8_duplicate_external/source.hpp
class CfgAmmo {
    class BulletBase;
    class BulletBase;
    class test: BulletBase{};
};
